--- a/skins.html
+++ b/skins.html
@@ -11,7 +11,7 @@
 <body>
 <main>
   <header>
-    <h1><a href="./index.html">Mathya</a></h1>
+    <h1><a href="./index.html">Mathia</a></h1>
     <nav>
       <a href="https://github.com/ttiaMa">github</a>
       <a href="https://twitter.com/mattiasbeentakn">twitter</a>
