--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   </p>
   <p>
     <ul>
-      <li><a href="https://b.mathya.it/">find new wip sets in osu!</a> - fast search with many tags and artists!!</li>
+      <li><a href="https://b.mathya.it/">find new wip sets in osu!</a> - fast search with many tags and artists!!
+        you can also download all the maps in a tournament pool by pasting all the ids from the sheet</li>
       <li><a href="https://github.com/ttiaMa/osu-bbcode-parser">osu! bbcode parser</a>, display your userpage in an html format!! --> <a href="https://bbcode.mathya.it/">example</a></li>
       <li>my <a href="./skins.html">skins</a> to play osu!</li>
     </ul> 
